force-app/main/default/objects/Account/fields/MaxOppAmt__c.field-meta.xml
<CustomField>
    <fullName>MaxOppAmt__c</fullName>
    <label>MaxOppAmt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>