force-app/main/default/objects/Account/fields/MinimumOppAmt__c.field-meta.xml
<CustomField>
    <fullName>MinimumOppAmt__c</fullName>
    <label>MinimumOppAmt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>