force-app/main/default/objects/Account/fields/Total_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Total_Opportunity__c</fullName>
    <label>Total Opportunity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>