force-app/main/default/objects/Account/fields/TotalChild__c.field-meta.xml
<CustomField>
    <fullName>TotalChild__c</fullName>
    <label>TotalChild</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>