force-app/main/default/objects/Account/fields/TotalOppAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalOppAmount__c</fullName>
    <label>TotalOppAmount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>